<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background Image</string>
    <string name="logo">logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_league">Find a team in your city and dominate league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
    <string name="finish_background">finish background</string>
    <string name="textview">TextView</string>
</resources>
